# gst-plugins-bad

./: configure.ac
docs/plugins/: Makefile.am  gst-plugins-bad-plugins-docs.sgml  gst-plugins-bad-plugins-sections.txt
gst/jpegparse/: Makefile.am  gstjpegparse.c  gstjpegparse.h
tests/check/: Makefile.am
