plugin_LTLIBRARIES = libgstjpegparse.la

libgstjpegparse_la_SOURCES = gstjpegparse.c
libgstjpegparse_la_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_CFLAGS)
libgstjpegparse_la_LIBADD = $(GST_LIBS) $(GST_BASE_LIBS)
libgstjpegparse_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
libgstjpegparse_la_LIBTOOLFLAGS = --tag=disable-static

noinst_HEADERS = gstjpegparse.h
